--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,4 @@
 # Auto detect text files and perform LF normalization
 * text=auto
-* .java linguist-detectable=false
-* .cpp liguist-detectbale=false
-* .html liguist-detectable=true
+* .java linguist-detectable=true
+* .cpp liguist-detectbale=true
